<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/nav_yoga"
        android:title="@string/yoga_asanas"
        android:icon="@drawable/ic_baseline_dashboard_24"/>
    <item
        android:id="@+id/nav_music"
        android:title="@string/healing_music"
        android:icon="@drawable/ic_baseline_music_note_24"/>
    <item
        android:id="@+id/nav_about_us"
        android:title="@string/about_us"
        android:icon="@drawable/ic_baseline_info_24"/>
    </group>
</menu>