<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity"
    android:background="@drawable/bg_login">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9F000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="189dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="54sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.547"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

            <EditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/edtName"
                app:layout_constraintStart_toStartOf="@+id/edtName"
                app:layout_constraintTop_toBottomOf="@+id/edtName" />

            <EditText
                android:id="@+id/edtSetPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:drawableLeft="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/edtEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/edtEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/edtEmailAddress" />

            <EditText
                android:id="@+id/confirmPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/edtSetPassword"
                app:layout_constraintStart_toStartOf="@+id/edtSetPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtSetPassword" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/white"
                android:text="@string/register"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/confirmPass"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/confirmPass"
                app:layout_constraintTop_toBottomOf="@+id/confirmPass" />

            <TextView
                android:id="@+id/txtHaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/already_have_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/btnRegister"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/btnRegister"
                app:layout_constraintTop_toBottomOf="@id/btnRegister" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>